# claude-mem

./: .gitignore
docs/reports/: 2026-04-15--prison-sis-cli-implementation.md
projects/: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN_SYSTEM.md  README.md  SPEC.md  push.sh
projects/.github/workflows/: windows-build.yml
projects/docker/: Dockerfile.arm64-cross  Dockerfile.multiarch  Dockerfile.x86_64  Dockerfile.x86_64-on-arm64  README.md  build-docker.sh  docker-compose.yml  moc-arm64  moc-wrapper.sh  qemu-wrapper.sh  rcc-arm64  toolchain-x86_64.cmake  uic-arm64
projects/docs/: WINDOWS_BUILD.md  产品介绍.md  安全性说明.md  快速入门.md  用户手册.md
projects/include/database/: DatabaseManager.h
projects/include/models/: Approval.h  AuditLog.h  Case.h  Criminal.h  Interrogation.h  Record.h  Suspect.h  Template.h  User.h
projects/include/services/: AuditService.h  AuthService.h  CryptoService.h  KeyManager.h  P2PNodeService.h  PrisonApiService.h
projects/include/ui/: LoginDialog.h  MainWindow.h  PINDialog.h
projects/include/ui/widgets/: ApprovalWidget.h  ArchiveWidget.h  BackupWidget.h  CaseDetailWidget.h  CaseListWidget.h  CriminalDetailWidget.h  CriminalEditDialog.h  CriminalFetchDialog.h  CriminalListWidget.h  LinedTextEdit.h  LogViewerWidget.h  RecordEditorWidget.h  RecordThemeSelector.h  ScanDownloadDialog.h  ScanUploadDialog.h  StatisticsWidget.h  SuspectDetailWidget.h  TemplateWidget.h  UserManageWidget.h
projects/include/utils/: DateUtils.h  EncryptUtil.h  PasswordHasher.h  PlatformUtils.h
projects/scripts/: build-windows.bat  build-windows.ps1  fix_users.sql
projects/src/: main.cpp
projects/src/cli/: cli_utils.cpp  cli_utils.h  formatter.cpp  formatter.h  main.cpp
projects/src/cli/commands/: approval_cmd.cpp  approval_cmd.h  audit_cmd.cpp  audit_cmd.h  criminals_cmd.cpp  criminals_cmd.h  export_cmd.cpp  export_cmd.h  records_cmd.cpp  records_cmd.h
projects/src/database/: DatabaseManager.cpp
projects/src/models/: Approval.cpp  AuditLog.cpp  Case.cpp  Criminal.cpp  Record.cpp  Template.cpp  User.cpp
projects/src/services/: AuditService.cpp  AuthService.cpp  CryptoService.cpp  KeyManager.cpp  P2PNodeService.cpp  PrisonApiService.cpp
projects/src/ui/: LoginDialog.cpp  MainWindow.cpp  PINDialog.cpp
projects/src/ui/styles/: dark_government.qss
projects/src/ui/widgets/: ApprovalWidget.cpp  ArchiveWidget.cpp  BackupWidget.cpp  CaseDetailWidget.cpp  CaseListWidget.cpp  CriminalDetailWidget.cpp  CriminalEditDialog.cpp  CriminalFetchDialog.cpp  CriminalListWidget.cpp  LinedTextEdit.cpp  LogViewerWidget.cpp  RecordEditorWidget.cpp  RecordThemeSelector.cpp  ScanDownloadDialog.cpp  ScanUploadDialog.cpp  StatisticsWidget.cpp  TemplateWidget.cpp  UserManageWidget.cpp
projects/src/utils/: DateUtils.cpp  EncryptUtil.cpp  PasswordHasher.cpp  PlatformUtils.cpp
